backend/Fase2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY
    DECIMAL

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PTCOMA
Rule 5     instruccion -> declaracion_normal PTCOMA
Rule 6     instruccion -> asignacion_instr PTCOMA
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> for_instr
Rule 9     instruccion -> while_instr
Rule 10    instruccion -> return_instr PTCOMA
Rule 11    instruccion -> continue_instr PTCOMA
Rule 12    instruccion -> break_instr PTCOMA
Rule 13    instruccion -> llamada_funcion_instr PTCOMA
Rule 14    instruccion -> funciones_instr
Rule 15    instruccion -> llamada_funcion_struct_instr PTCOMA
Rule 16    imprimir -> RCONSOLE PUNTO RLOG PARI expresiones_coma PARD
Rule 17    declaracion_normal -> RLET ID DPUNTOS tipo IGUAL expresion
Rule 18    declaracion_normal -> RLET ID IGUAL expresion
Rule 19    declaracion_normal -> RLET ID
Rule 20    declaracion_normal -> RLET ID DPUNTOS tipo
Rule 21    asignacion_instr -> ID IGUAL expresion DPUNTOS DPUNTOS tipo
Rule 22    asignacion_instr -> ID IGUAL expresion
Rule 23    while_instr -> WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 24    for_instr -> FOR PARI RLET ID OF expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 25    for_instr -> FOR PARI RLET ID IGUAL expresion PTCOMA expresion PTCOMA ID MAS MAS PARD LLAVEIZQ instrucciones LLAVEDER
Rule 26    return_instr -> RETURN expresion
Rule 27    return_instr -> RETURN
Rule 28    break_instr -> BREAK
Rule 29    continue_instr -> CONTINUE
Rule 30    funciones_instr -> FUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
Rule 31    funciones_instr -> FUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
Rule 32    parametros -> parametros COMA parametro
Rule 33    parametros -> parametro
Rule 34    parametro -> ID DPUNTOS tipo
Rule 35    llamada_funcion_instr -> ID PARI PARD
Rule 36    llamada_funcion_struct_instr -> ID PARI parametros_llamada PARD
Rule 37    parametros_llamada -> parametros_llamada COMA expresion
Rule 38    parametros_llamada -> expresion
Rule 39    if_instr -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 40    if_instr -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 41    if_instr -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr
Rule 42    if_instr -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 43    elseifs_instr -> elseifs_instr elseif_instr
Rule 44    elseifs_instr -> elseif_instr
Rule 45    elseif_instr -> RELSEIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 46    tipo -> STRING
Rule 47    tipo -> NUMBER
Rule 48    tipo -> BOOLEAN
Rule 49    expresion -> PARI expresion PARD
Rule 50    expresion -> CADENA
Rule 51    expresion -> NUMBER
Rule 52    expresion -> MENOS NUMBER
Rule 53    expresion -> NULL
Rule 54    expresion -> ID
Rule 55    expresion -> RTRUE
Rule 56    expresion -> RFALSE
Rule 57    expresion -> expresion MAS expresion
Rule 58    expresion -> expresion MENOS expresion
Rule 59    expresion -> expresion POR expresion
Rule 60    expresion -> expresion DIV expresion
Rule 61    expresion -> expresion POTENCIA expresion
Rule 62    expresion -> expresion PORCENTAJE expresion
Rule 63    expresion -> expresion IGUALIGUAL expresion
Rule 64    expresion -> expresion DIFERENTE expresion
Rule 65    expresion -> expresion MENOR expresion
Rule 66    expresion -> expresion MAYOR expresion
Rule 67    expresion -> expresion MENORIGUAL expresion
Rule 68    expresion -> expresion MAYORIGUAL expresion
Rule 69    expresion -> expresion AND expresion
Rule 70    expresion -> expresion OR expresion
Rule 71    expresion -> NOT expresion
Rule 72    expresiones_coma -> expresiones_coma COMA expresion
Rule 73    expresiones_coma -> expresion

Terminals, with rules where they appear

AND                  : 69
ANY                  : 
BOOLEAN              : 48
BREAK                : 28
CADENA               : 50
COMA                 : 32 37 72
CONTINUE             : 29
DECIMAL              : 
DIFERENTE            : 64
DIV                  : 60
DPUNTOS              : 17 20 21 21 34
FOR                  : 24 25
FUNCTION             : 30 31
ID                   : 17 18 19 20 21 22 24 25 25 30 31 34 35 36 54
IGUAL                : 17 18 21 22 25
IGUALIGUAL           : 63
LLAVEDER             : 23 24 25 30 31 39 40 40 41 42 42 45
LLAVEIZQ             : 23 24 25 30 31 39 40 40 41 42 42 45
MAS                  : 25 25 57
MAYOR                : 66
MAYORIGUAL           : 68
MENOR                : 65
MENORIGUAL           : 67
MENOS                : 52 58
NOT                  : 71
NULL                 : 53
NUMBER               : 47 51 52
OF                   : 24
OR                   : 70
PARD                 : 16 23 24 25 30 31 35 36 39 40 41 42 45 49
PARI                 : 16 23 24 25 30 31 35 36 39 40 41 42 45 49
POR                  : 59
PORCENTAJE           : 62
POTENCIA             : 61
PTCOMA               : 4 5 6 10 11 12 13 15 25 25
PUNTO                : 16
RCONSOLE             : 16
RELSE                : 40 42
RELSEIF              : 45
RETURN               : 26 27
RFALSE               : 56
RIF                  : 39 40 41 42
RLET                 : 17 18 19 20 24 25
RLOG                 : 16
RTRUE                : 55
STRING               : 46
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
break_instr          : 12
continue_instr       : 11
declaracion_normal   : 5
elseif_instr         : 43 44
elseifs_instr        : 40 41 43
expresion            : 17 18 21 22 23 24 25 25 26 37 38 39 40 41 42 45 49 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72 73
expresiones_coma     : 16 72
for_instr            : 8
funciones_instr      : 14
if_instr             : 7
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 23 24 25 30 31 39 40 40 41 42 42 45
llamada_funcion_instr : 13
llamada_funcion_struct_instr : 15
parametro            : 32 33
parametros           : 31 32
parametros_llamada   : 36 37
return_instr         : 10
tipo                 : 17 20 21 34
while_instr          : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . asignacion_instr PTCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . for_instr
    (9) instruccion -> . while_instr
    (10) instruccion -> . return_instr PTCOMA
    (11) instruccion -> . continue_instr PTCOMA
    (12) instruccion -> . break_instr PTCOMA
    (13) instruccion -> . llamada_funcion_instr PTCOMA
    (14) instruccion -> . funciones_instr
    (15) instruccion -> . llamada_funcion_struct_instr PTCOMA
    (16) imprimir -> . RCONSOLE PUNTO RLOG PARI expresiones_coma PARD
    (17) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> . RLET ID IGUAL expresion
    (19) declaracion_normal -> . RLET ID
    (20) declaracion_normal -> . RLET ID DPUNTOS tipo
    (21) asignacion_instr -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (22) asignacion_instr -> . ID IGUAL expresion
    (39) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (40) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr RELSE LLAVEIZQ instrucciones LLAVEDER
    (41) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr
    (42) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (24) for_instr -> . FOR PARI RLET ID OF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) for_instr -> . FOR PARI RLET ID IGUAL expresion PTCOMA expresion PTCOMA ID MAS MAS PARD LLAVEIZQ instrucciones LLAVEDER
    (23) while_instr -> . WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (26) return_instr -> . RETURN expresion
    (27) return_instr -> . RETURN
    (29) continue_instr -> . CONTINUE
    (28) break_instr -> . BREAK
    (35) llamada_funcion_instr -> . ID PARI PARD
    (30) funciones_instr -> . FUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (31) funciones_instr -> . FUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (36) llamada_funcion_struct_instr -> . ID PARI parametros_llamada PARD

    RCONSOLE        shift and go to state 16
    RLET            shift and go to state 17
    ID              shift and go to state 18
    RIF             shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    RETURN          shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    FUNCTION        shift and go to state 25

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    for_instr                      shift and go to state 8
    while_instr                    shift and go to state 9
    return_instr                   shift and go to state 10
    continue_instr                 shift and go to state 11
    break_instr                    shift and go to state 12
    llamada_funcion_instr          shift and go to state 13
    funciones_instr                shift and go to state 14
    llamada_funcion_struct_instr   shift and go to state 15

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . asignacion_instr PTCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . for_instr
    (9) instruccion -> . while_instr
    (10) instruccion -> . return_instr PTCOMA
    (11) instruccion -> . continue_instr PTCOMA
    (12) instruccion -> . break_instr PTCOMA
    (13) instruccion -> . llamada_funcion_instr PTCOMA
    (14) instruccion -> . funciones_instr
    (15) instruccion -> . llamada_funcion_struct_instr PTCOMA
    (16) imprimir -> . RCONSOLE PUNTO RLOG PARI expresiones_coma PARD
    (17) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> . RLET ID IGUAL expresion
    (19) declaracion_normal -> . RLET ID
    (20) declaracion_normal -> . RLET ID DPUNTOS tipo
    (21) asignacion_instr -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (22) asignacion_instr -> . ID IGUAL expresion
    (39) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (40) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr RELSE LLAVEIZQ instrucciones LLAVEDER
    (41) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr
    (42) if_instr -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (24) for_instr -> . FOR PARI RLET ID OF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) for_instr -> . FOR PARI RLET ID IGUAL expresion PTCOMA expresion PTCOMA ID MAS MAS PARD LLAVEIZQ instrucciones LLAVEDER
    (23) while_instr -> . WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (26) return_instr -> . RETURN expresion
    (27) return_instr -> . RETURN
    (29) continue_instr -> . CONTINUE
    (28) break_instr -> . BREAK
    (35) llamada_funcion_instr -> . ID PARI PARD
    (30) funciones_instr -> . FUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (31) funciones_instr -> . FUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (36) llamada_funcion_struct_instr -> . ID PARI parametros_llamada PARD

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 16
    RLET            shift and go to state 17
    ID              shift and go to state 18
    RIF             shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    RETURN          shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    FUNCTION        shift and go to state 25

    instruccion                    shift and go to state 26
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    for_instr                      shift and go to state 8
    while_instr                    shift and go to state 9
    return_instr                   shift and go to state 10
    continue_instr                 shift and go to state 11
    break_instr                    shift and go to state 12
    llamada_funcion_instr          shift and go to state 13
    funciones_instr                shift and go to state 14
    llamada_funcion_struct_instr   shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PTCOMA

    PTCOMA          shift and go to state 27


state 5

    (5) instruccion -> declaracion_normal . PTCOMA

    PTCOMA          shift and go to state 28


state 6

    (6) instruccion -> asignacion_instr . PTCOMA

    PTCOMA          shift and go to state 29


state 7

    (7) instruccion -> if_instr .

    RCONSOLE        reduce using rule 7 (instruccion -> if_instr .)
    RLET            reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    RIF             reduce using rule 7 (instruccion -> if_instr .)
    FOR             reduce using rule 7 (instruccion -> if_instr .)
    WHILE           reduce using rule 7 (instruccion -> if_instr .)
    RETURN          reduce using rule 7 (instruccion -> if_instr .)
    CONTINUE        reduce using rule 7 (instruccion -> if_instr .)
    BREAK           reduce using rule 7 (instruccion -> if_instr .)
    FUNCTION        reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVEDER        reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> for_instr .

    RCONSOLE        reduce using rule 8 (instruccion -> for_instr .)
    RLET            reduce using rule 8 (instruccion -> for_instr .)
    ID              reduce using rule 8 (instruccion -> for_instr .)
    RIF             reduce using rule 8 (instruccion -> for_instr .)
    FOR             reduce using rule 8 (instruccion -> for_instr .)
    WHILE           reduce using rule 8 (instruccion -> for_instr .)
    RETURN          reduce using rule 8 (instruccion -> for_instr .)
    CONTINUE        reduce using rule 8 (instruccion -> for_instr .)
    BREAK           reduce using rule 8 (instruccion -> for_instr .)
    FUNCTION        reduce using rule 8 (instruccion -> for_instr .)
    $end            reduce using rule 8 (instruccion -> for_instr .)
    LLAVEDER        reduce using rule 8 (instruccion -> for_instr .)


state 9

    (9) instruccion -> while_instr .

    RCONSOLE        reduce using rule 9 (instruccion -> while_instr .)
    RLET            reduce using rule 9 (instruccion -> while_instr .)
    ID              reduce using rule 9 (instruccion -> while_instr .)
    RIF             reduce using rule 9 (instruccion -> while_instr .)
    FOR             reduce using rule 9 (instruccion -> while_instr .)
    WHILE           reduce using rule 9 (instruccion -> while_instr .)
    RETURN          reduce using rule 9 (instruccion -> while_instr .)
    CONTINUE        reduce using rule 9 (instruccion -> while_instr .)
    BREAK           reduce using rule 9 (instruccion -> while_instr .)
    FUNCTION        reduce using rule 9 (instruccion -> while_instr .)
    $end            reduce using rule 9 (instruccion -> while_instr .)
    LLAVEDER        reduce using rule 9 (instruccion -> while_instr .)


state 10

    (10) instruccion -> return_instr . PTCOMA

    PTCOMA          shift and go to state 30


state 11

    (11) instruccion -> continue_instr . PTCOMA

    PTCOMA          shift and go to state 31


state 12

    (12) instruccion -> break_instr . PTCOMA

    PTCOMA          shift and go to state 32


state 13

    (13) instruccion -> llamada_funcion_instr . PTCOMA

    PTCOMA          shift and go to state 33


state 14

    (14) instruccion -> funciones_instr .

    RCONSOLE        reduce using rule 14 (instruccion -> funciones_instr .)
    RLET            reduce using rule 14 (instruccion -> funciones_instr .)
    ID              reduce using rule 14 (instruccion -> funciones_instr .)
    RIF             reduce using rule 14 (instruccion -> funciones_instr .)
    FOR             reduce using rule 14 (instruccion -> funciones_instr .)
    WHILE           reduce using rule 14 (instruccion -> funciones_instr .)
    RETURN          reduce using rule 14 (instruccion -> funciones_instr .)
    CONTINUE        reduce using rule 14 (instruccion -> funciones_instr .)
    BREAK           reduce using rule 14 (instruccion -> funciones_instr .)
    FUNCTION        reduce using rule 14 (instruccion -> funciones_instr .)
    $end            reduce using rule 14 (instruccion -> funciones_instr .)
    LLAVEDER        reduce using rule 14 (instruccion -> funciones_instr .)


state 15

    (15) instruccion -> llamada_funcion_struct_instr . PTCOMA

    PTCOMA          shift and go to state 34


state 16

    (16) imprimir -> RCONSOLE . PUNTO RLOG PARI expresiones_coma PARD

    PUNTO           shift and go to state 35


state 17

    (17) declaracion_normal -> RLET . ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> RLET . ID IGUAL expresion
    (19) declaracion_normal -> RLET . ID
    (20) declaracion_normal -> RLET . ID DPUNTOS tipo

    ID              shift and go to state 36


state 18

    (21) asignacion_instr -> ID . IGUAL expresion DPUNTOS DPUNTOS tipo
    (22) asignacion_instr -> ID . IGUAL expresion
    (35) llamada_funcion_instr -> ID . PARI PARD
    (36) llamada_funcion_struct_instr -> ID . PARI parametros_llamada PARD

    IGUAL           shift and go to state 37
    PARI            shift and go to state 38


state 19

    (39) if_instr -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (40) if_instr -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr RELSE LLAVEIZQ instrucciones LLAVEDER
    (41) if_instr -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER elseifs_instr
    (42) if_instr -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 39


state 20

    (24) for_instr -> FOR . PARI RLET ID OF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) for_instr -> FOR . PARI RLET ID IGUAL expresion PTCOMA expresion PTCOMA ID MAS MAS PARD LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 40


state 21

    (23) while_instr -> WHILE . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 41


state 22

    (26) return_instr -> RETURN . expresion
    (27) return_instr -> RETURN .
    (49) expresion -> . PARI expresion PARD
    (50) expresion -> . CADENA
    (51) expresion -> . NUMBER
    (52) expresion -> . MENOS NUMBER
    (53) expresion -> . NULL
    (54) expresion -> . ID
    (55) expresion -> . RTRUE
    (56) expresion -> . RFALSE
    (57) expresion -> . expresion MAS expresion
    (58) expresion -> . expresion MENOS expresion
    (59) expresion -> . expresion POR expresion
    (60) expresion -> . expresion DIV expresion
    (61) expresion -> . expresion POTENCIA expresion
    (62) expresion -> . expresion PORCENTAJE expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion MENOR expresion
    (66) expresion -> . expresion MAYOR expresion
    (67) expresion -> . expresion MENORIGUAL expresion
    (68) expresion -> . expresion MAYORIGUAL expresion
    (69) expresion -> . expresion AND expresion
    (70) expresion -> . expresion OR expresion
    (71) expresion -> . NOT expresion

    PTCOMA          reduce using rule 27 (return_instr -> RETURN .)
    PARI            shift and go to state 43
    CADENA          shift and go to state 44
    NUMBER          shift and go to state 45
    MENOS           shift and go to state 46
    NULL            shift and go to state 47
    ID              shift and go to state 48
    RTRUE           shift and go to state 49
    RFALSE          shift and go to state 50
    NOT             shift and go to state 51

    expresion                      shift and go to state 42

state 23

    (29) continue_instr -> CONTINUE .

    PTCOMA          reduce using rule 29 (continue_instr -> CONTINUE .)


state 24

    (28) break_instr -> BREAK .

    PTCOMA          reduce using rule 28 (break_instr -> BREAK .)


state 25

    (30) funciones_instr -> FUNCTION . ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (31) funciones_instr -> FUNCTION . ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 52


state 26

    (2) instrucciones -> instrucciones instruccion .

    RCONSOLE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLET            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CONTINUE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 27

    (4) instruccion -> imprimir PTCOMA .

    RCONSOLE        reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RLET            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    ID              reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RIF             reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    FOR             reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    WHILE           reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RETURN          reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    CONTINUE        reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    BREAK           reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    FUNCTION        reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    $end            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    LLAVEDER        reduce using rule 4 (instruccion -> imprimir PTCOMA .)


state 28

    (5) instruccion -> declaracion_normal PTCOMA .

    RCONSOLE        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RLET            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    ID              reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RIF             reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    FOR             reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    WHILE           reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RETURN          reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    CONTINUE        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    BREAK           reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    FUNCTION        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    $end            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    LLAVEDER        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)


state 29

    (6) instruccion -> asignacion_instr PTCOMA .

    RCONSOLE        reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    RLET            reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    RIF             reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    FOR             reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    WHILE           reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    RETURN          reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    CONTINUE        reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    BREAK           reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    FUNCTION        reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)
    LLAVEDER        reduce using rule 6 (instruccion -> asignacion_instr PTCOMA .)


state 30

    (10) instruccion -> return_instr PTCOMA .

    RCONSOLE        reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    RLET            reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    ID              reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    RIF             reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    FOR             reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    WHILE           reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    RETURN          reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    CONTINUE        reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    BREAK           reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    FUNCTION        reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    $end            reduce using rule 10 (instruccion -> return_instr PTCOMA .)
    LLAVEDER        reduce using rule 10 (instruccion -> return_instr PTCOMA .)


state 31

    (11) instruccion -> continue_instr PTCOMA .

    RCONSOLE        reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    RLET            reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    ID              reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    RIF             reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    FOR             reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    WHILE           reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    RETURN          reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    CONTINUE        reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    BREAK           reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    FUNCTION        reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    $end            reduce using rule 11 (instruccion -> continue_instr PTCOMA .)
    LLAVEDER        reduce using rule 11 (instruccion -> continue_instr PTCOMA .)


state 32

    (12) instruccion -> break_instr PTCOMA .

    RCONSOLE        reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    RLET            reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    ID              reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    RIF             reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    FOR             reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    WHILE           reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    RETURN          reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    CONTINUE        reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    BREAK           reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    FUNCTION        reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    $end            reduce using rule 12 (instruccion -> break_instr PTCOMA .)
    LLAVEDER        reduce using rule 12 (instruccion -> break_instr PTCOMA .)


state 33

    (13) instruccion -> llamada_funcion_instr PTCOMA .

    RCONSOLE        reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    RLET            reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    ID              reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    RIF             reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    FOR             reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    WHILE           reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    RETURN          reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    CONTINUE        reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    BREAK           reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    FUNCTION        reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    $end            reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)
    LLAVEDER        reduce using rule 13 (instruccion -> llamada_funcion_instr PTCOMA .)


state 34

    (15) instruccion -> llamada_funcion_struct_instr PTCOMA .

    RCONSOLE        reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    RLET            reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    ID              reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    RIF             reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    FOR             reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    WHILE           reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    RETURN          reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    CONTINUE        reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    BREAK           reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    FUNCTION        reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    $end            reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)
    LLAVEDER        reduce using rule 15 (instruccion -> llamada_funcion_struct_instr PTCOMA .)


state 35

    (16) imprimir -> RCONSOLE PUNTO . RLOG PARI expresiones_coma PARD

    RLOG            shift and go to state 53


state 36

    (17) declaracion_normal -> RLET ID . DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> RLET ID . IGUAL expresion
    (19) declaracion_normal -> RLET ID .
    (20) declaracion_normal -> RLET ID . DPUNTOS tipo
